gccida/g2/integrate_decl_tree
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/integrate_decl_tree/src/integrate.c:2264:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/integrate_decl_tree/src/integrate.c:2265:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *p_vars; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/integrate_decl_tree/src/integrate.c:2267:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/integrate_decl_tree/src/integrate.c:2269:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/integrate_decl_tree/src/integrate.c:2273:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/integrate_decl_tree/src/integrate.c:2293:23: error: expected expression
p_vars = ( tree_node *)&v5->block.vars; 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/integrate_decl_tree/src/integrate.c:2293:12: error: use of undeclared identifier 'tree_node'
p_vars = ( tree_node *)&v5->block.vars; 
           ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/integrate_decl_tree/src/obj/integrate.o] Error 1
